--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1074,8 +1074,8 @@ html {
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 body {
-  font-family: source-han-serif-sc, Helvetica, Arial, sans-serif;
-  font-size: 14px;
+  font-family: Helvetica, Arial, sans-serif;
+  font-size: 12px;
   line-height: 1.42857143;
   color: #333;
   background-color: #fff;
