--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -134,7 +134,7 @@ body {
      *     TypeIsBeautiful,
      *     [This Post](http://zhuanlan.zhihu.com/ibuick/20186806) etc.
      */
-  font-family: 'Noto Serif SC', "Georgia", "Times New Roman", "STSong", "SimSun", serif;
+  font-family: 'Noto Serif SC', "Times New Roman", "STSong", "SimSun", serif;
   line-height: 1.7;
   font-size: 18px;
   color: #404040;
