--- a/css/hux-blog.css
+++ b/css/hux-blog.css
@@ -811,6 +811,7 @@ img::-moz-selection {
 /* Hux add tags support */
 .tags {
   margin-bottom: -5px;
+  white-space: nowrap;
 }
 .tags a,
 .tags .tag {
